compiler/testData/diagnostics/tests/coroutines/suspendParameter.kt

fun async1(suspend <!UNUSED_PARAMETER!>x<!>: () -> Unit) {}
fun async2(<!INAPPLICABLE_MODIFIER!>suspend<!> <!UNUSED_PARAMETER!>x<!>: Unit) {}
